--- a/registr.html
+++ b/registr.html
@@ -118,16 +118,16 @@
                     <label for="selectTypeForm" class="pb-2 p-0 text-white fw-bold">Formation souhaitée <span class="text-dark">choisis votre formation souhaitée</span>
                     <!-- <input type="number" name="" id="" class="border-0 p-2 mb-3" placeholder="choisis votre formation souhaitée"> -->
                     <div class=" m-0 p-2  bg-white d-flex align-items-center row container">
-                        <select name="" id="selectTypeForm"  class="OptionInputForm col-10  p-0 m-0 border-0 ">
+                        <select name="" id="selectTypeForm"  class="OptionInputForm col-10  p-0 m-0 border-0 bg-transparent ">
                             <option value="op1" class="11">Opt1</option>
                             <option value="op2" class="21">Opt 2</option>
                             <option value="" class="31">Opt 3</option>
                             <option value="" class="41">Opt 5</option>
                             <option value="" class="51">Opt1</option>
                         </select>
-                        <!-- <label for="selectTypeForm" class=" col-2">
+                        <label for="selectTypeForm" class=" col-2">
                             <i class="fa-solid fa-caret-down text-end bg-primary w-100"></i>
-                        </label> -->
+                        </label>
                     </div>
                     </label>
 
