--- a/registr.html
+++ b/registr.html
@@ -107,28 +107,29 @@
                 <h2 class="text-center my-3 mb-5">Remplissez le formulaire suivant</h2>
             <form action="" class=" row col-md-7">
                 <label for="" class="text-align-start pb-2 p-0  text-white fw-bold">Nom complet</label>
-                <input oninput="functionChekInpuVal()" type="text" name="" id="input1" class="border-0 p-2 mb-4 mb-md-4 " placeholder="Entrez votre nom complet" required>
+                <input oninput="functionChekInpuVal()" type="text" name="" id="input1" class="border-0 p-2 mb-4 mb-md-4 inputsForm" placeholder="Entrez votre nom complet" required>
 
                 <label for="" class="pb-2 p-0 text-capitalize  text-white fw-bold">numéro de telephone</label>
-                <input  oninput="functionChekInpuVal()" type="number" name="" id="" class="border-0 p-2 mb-3" placeholder="Entrez votre Numéro de téléphone" required>
+                <input  oninput="functionChekInpuVal()" type="number" name="" id="" class="border-0 p-2 mb-3 inputsForm" placeholder="Entrez votre Numéro de téléphone" required>
 
                 <label for="" class="pb-2 p-0   text-white fw-bold">Ville de résidence</label>
-                <input  oninput="functionChekInpuVal()" type="text" name="" id="" class="border-0 p-2 mb-4" placeholder="Entrez votre ville de résidence" required>
+                <input  oninput="functionChekInpuVal()" type="text" name="" id="" class="border-0 p-2 mb-4 inputsForm" placeholder="Entrez votre ville de résidence" required>
 
                     <label for="selectTypeForm" class="pb-2 p-0 text-white fw-bold">Formation souhaitée <span class="text-dark">choisis votre formation souhaitée</span>
                     <!-- <input type="number" name="" id="" class="border-0 p-2 mb-3" placeholder="choisis votre formation souhaitée"> -->
                     <div class=" m-0 p-2  bg-white d-flex align-items-center row container">
-                        <select name="" id="selectTypeForm"  class="OptionInputForm col-10  p-0 m-0 border-0 bg-transparent ">
+                        <select name="" id="selectTypeForm"  class="OptionInputForm   p-0 m-0 border-0 bg-transparent " required>
+                            <option value="" selected class="11">choisis</option>
                             <option value="op1" class="11">Opt1</option>
-                            <option value="op2" class="21">Opt 2</option>
-                            <option value="" class="31">Opt 3</option>
-                            <option value="" class="41">Opt 5</option>
-                            <option value="" class="51">Opt1</option>
+                            <option value="op2"  class="21">Opt 2</option>
+                            <option value="opt3" class="31">Opt 3</option>
+                            <option value="oP4" class="41">Opt 5</option>
+                            <option value="op5" class="51">Opt1</option>
                         </select>
                     </div>
                     </label>
 
-                <button class="inscrBtn border-0 py-3 mt-4 text-white my-3 fw-bold fs-5" type="submit" onclick="chekinaWehdakhwya()" onclick="subm()">Inscrire maintenant</button>
+                <button class="inscrBtn border-0 py-3 mt-4 text-white my-3 fw-bold fs-5" type="submit" onclick="chekinaWehdakhwya()" >Inscrire maintenant</button>
             </form>
         </div>
     </div>
