--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="cssFileGenius.css?v=?php echo filemtime('cssFileGenius.css'); ?>">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
     <!-- <link rel="stylesheet" href="cssFileGenius.css"> -->
 </head>
 <body> 
@@ -104,7 +105,7 @@
                 <h2>Genius Center Prive</h2>
             </div>
             <p>façonnons votre expertise pour relever les défis logistiques du futur avec confiance et succès.</p>
-            <a href="registr.html"><button class="GcpButton">Inscrivez-vous maintenant</button></a>
+            <a href="testph.php"><button class="GcpButton">Inscrivez-vous maintenant</button></a>
         </div>
     </div>
 <!-- share bar social on first section -->
@@ -162,6 +163,43 @@
         <div  alt="5" class="item item5"></div>
     </div>
 </div>
+
+<div class="secCallToact1 d-flex justify-content-center px-3   w-100 py-4 ">
+
+    <div class="div1CallToAction  row   bg-primary rounded-3">
+        <div class="  btnCallTOac row  d-flex  h-100 align-items-center col-md-6 p-0 p-md-5  justify-content-between  text-start m-0">
+            <p class="text-white col-12">N'attendez pas le moment parfait—créez-le. Rejoignez-nous dès aujourd'hui !</p>
+            <a href="testph.php">
+                <button class=" btncallto fw-bold px-3 col-12 w-100 w-md-100 p-2  text-white" href="testph.php" >            
+                 Contacter nous maintenant
+                <i class="fa-solid fa-hourglass-start fs-5 p-1 px-2 text-center "></i></button>
+            </a>
+        </div>
+    <!-- </div> -->
+
+        <div class="col-6 dsdsIIIsd  d-flex align-items-center justify-content-center p-0">
+            <div class="borderreduisCont   d-flex align-items-center justify-content-center ">
+                        <div class="borderA1 A0  d-flex align-items-center justify-content-center">
+                            <div class="borderA1 A1  d-flex align-items-center justify-content-center container">
+                                <div class="borderA1 A2  d-flex align-items-center justify-content-center container">
+                                    <div class="borderA1 A3  container">
+                                        </div>
+                                </div>  
+                            </div>     
+                        </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
 <!-- review -->
 <section class="reviewsSec hidden">
     <i class="fa-regular fa-star iOfreview"></i>
@@ -173,7 +211,7 @@
         <div class="smallContainerReview">
             <div class="reviewDiv">
                     <!-- <img src="femmecasiste.webp" alt=""> -->
-            </div>    
+            </div>   
             <div class="ReviewInfo">
                     <img src="./assets/iOfreview.png" alt="">
                     <p style="font-style: italic;">"La formation logistique a dépassé toutes mes attentes ! Les instructeurs étaient extrêmement compétents et engageants. J'ai acquis des compétences précieuses qui ont déjà eu un impact positif sur ma carrière. Je recommande vivement cette formation à tous ceux qui souhaitent exceller dans le domaine de la logistique , Merci le groupe GCP ."</p>
